# envio

./: CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh
.github/workflows/: CICD.yml
completions/: _envio  _envio.ps1  envio.bash  envio.fish
docs/: build_from_source.md  usage.md
man/: envio.1
scripts/: create-release.sh
src/: env.rs  lib.rs  profile.rs
src/cipher/: gpg.rs
