[package]
name = "envio"
version = "0.7.0"
rust-version = "1.93.0"
edition = "2024"
description = "A secure command-line tool for managing environment variables"
authors = ["Humble Penguin <humblepenguinn@gmail.com>"]
homepage = "https://github.com/humblepenguinn/envio/"
repository = "https://github.com/humblepenguinn/envio/"
license = "MIT/Apache-2.0"
readme = "README.md"
build = "build/build.rs"

[features]
# disable the application feature when using envio as a library
default = ["application"]
application = [
    "clap",
    "colored",
    "comfy-table",
    "dirs",
    "git-version",
    "indicatif",
    "inquire",
    "keyring",
    "ratatui",
    "regex",
    "reqwest",
    "semver",
    "shell-escape",
    "sysinfo",
    "tokio",
    "typetag",
    "url",
]

[lib]
name = "envio"
path = "src/lib.rs"
doctest = false

[dependencies]
argon2 = { version = "0.5.3", features = ["zeroize"] }
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"], optional = true }
colored = { version = "3.1.1", optional = true }
comfy-table = { version = "7.2.2", optional = true }
crossterm = { version = "0.29.0", optional = true }
dirs = { version = "6.0.0", optional = true }
dyn-clone = "1.0.20"
git-version = { version = "0.3.9", optional = true }
indicatif = { version = "0.18.4", optional = true }
indexmap = { version = "2.14.0", features = ["serde"] }
inquire = { version = "0.9.4", features = ["date"], optional = true }
keyring = { version = "4.1.2", features = ["v1"], optional = true }
paste = "1.0.15"
postcard = { version = "1.1.3", features = ["alloc"] }
ratatui = { version = "0.30.2", optional = true }
regex = { version = "1.12", optional = true }
reqwest = { version = "0.13.4", features = ["json"], optional = true }
semver = { version = "1.0.28", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shell-escape = { version = "0.1.5", optional = true }
strum = "0.28"
strum_macros = "0.28"
sysinfo = { version = "0.38.4", optional = true }
serde_with = { version = "3.21.0", features = ["base64"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", optional = true }
typetag = { version = "0.2", optional = true }
url = { version = "2.5.8", optional = true }
uuid = { version = "1.23.3", features = ["v4"] }
zeroize = { version = "1.9.0", features = ["zeroize_derive"] }

[target.'cfg(unix)'.dependencies]
gpgme = "0.11.0"

[build-dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
clap_mangen = "0.3.0"
clap_complete = "4.6.5"
regex = "1.12.4"
semver = "1.0.28"

[profile.release]
lto = true
strip = true
codegen-units = 1
